plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/numericMultString.xpath2
4 * <error descr="Expected type 'one of xs:numeric, xs:duration', got 'xs:string'">'4'</error>